tests/fixtures/invalid/pow_none_float_set.py
# Cannot call pow() with None, Float, Set[int]
x = pow(None, 1.0, {1, 2, 3})
